# dysco

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  aftimeblockencoder.cc  aftimeblockencoder.cpp  aftimeblockencoder.h  aipscompress.cpp  bytepacker.h  compress.cpp  decompress.cpp  dictionary.h  dscompress.cc  dscompress.cpp  dynamicgausencoder.h  dyscodatacolumn.cpp  dyscodatacolumn.h  dyscodistribution.h  dysconormalization.h  dyscostman.cpp  dyscostman.h  dyscostmancol.h  dyscostmanerror.h  dyscoweightcolumn.cpp  dyscoweightcolumn.h  encodeexample.cpp  gausencoder.cpp  gausencoder.h  getmsencdistr.cpp  header.h  histogram.h  pack.sh  package.dox  rftimeblockencoder.cc  rftimeblockencoder.cpp  rftimeblockencoder.h  rmscollector.cpp  rmscollector.h  rmsdiff.cpp  (+26 more)
.travis/: Dockerfile
CMake/: SetTargetCPU.cmake
CPack/: CMakeLists.txt  DetermineEnabledAVXFeatures.cmake
aocommon/: uvector_03.h  uvector_11.h
dysco2/: dysco2.txt
scripts/: copy-to-casacore.sh  run-format.sh
scripts/testndppp/: NDPPP-compressed-add-compressed-column.parset  NDPPP-compressed-add-uncompressed-column.parset  NDPPP-input-to-uncompressed.parset  NDPPP-uncompressed-add-compressed-column.parset  NDPPP-uncompressed-add-uncompressed-column.parset  NDPPP-uncompressed-to-compressed.parset  NDPPP-uncompressed-to-weightcompressed.parset  showdminfo.py  testndppp.sh
tests/: distributionexample.cc  encodeexample.cc  encodeexample.cpp  runtests.cpp  testbytepacking.cpp  testdictionary.cc  testdithering.cc  testdithering.cpp  testdyscostman.cpp  testtimeblockencoder.cc  testtimeblockencoder.cpp
testsolve/: Makefile  test.cpp
